# sekai

./: README.md
etc/: dhcpcd.conf
etc/rc.d/: rc.S  rc.inet1.conf  rc.local
root/: lk204.pl  main-menu
root/midi/: Makefile.am  configure.ac  lk204.c  lk204.h  threev.c  vcotest.c
